fix: apply alignment in people card and profiles found

--- a/website/src/pages/ReservedArea/People/index.less
+++ b/website/src/pages/ReservedArea/People/index.less
@@ -10,6 +10,7 @@
   &__pagination,
   &__empty {
     margin-top: 20px;
+    padding-left: 16px;
   }
 
   &__items,
@@ -36,7 +37,7 @@
   }
 
   .ant-card-body {
-    padding: 16px 24px;
+    padding: 16px 16px;
   }
 
   &__content {
